# schema-registry

./: .pre-commit-config.yaml  .refsignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  NEXT_AGENT_HANDOFF_DAG_INTEGRATION_2026-01-28.md  README.md  SCHEMA_EXTENSIONS.md  acronyms-catalog.json  resource-access.schema.json
.roadmap/: decision-log.json  follow-up-register.json
docs/: GITHUB_ACTIONS.md  PORTFOLIO_DEPENDENCY_IMPLEMENTATION_2026-01-28.md
examples/: roadmap.json
schemas/: ComputedValue.schema.v1.0.json  README.md  acronyms-catalog.schema.json  agent-prompt.schema.json  architecture-roadmap.schema.v1.json  boundaries.schema.json  decision-log.schema.json  decision-log.schema.v2.json  deliverable.schema.json  dependencies.schema.json  deployment-metrics.schema.json  deprecation-header.schema.json  element-manifest.schema.json  environment-map.schema.json  evidence-session.schema.json  extensions.schema.v1.json  feature.schema.json  follow-up-register.schema.json  infrastructure-catalog.schema.json  interfaces.schema.json  metrics-pipeline.schema.json  resource-access.schema.json  roadmap-business.schema.json  roadmap-business.schema.v2.1.json  roadmap-business.schema.v2.3.json  roadmap-business.schema.v3.0.draft.json  (+21 more)
tools/luhtech-schema/: .gitignore  README.md  pyproject.toml
tools/luhtech-schema/src/luhtech_schema/: __init__.py  __main__.py  acronyms.py  classify.py  cli.py  migrate.py  refs.py  schema_map.py  validate.py
tools/luhtech-schema/tests/: test_acronyms.py  test_classify.py  test_migrate.py  test_refs.py  test_schema_map.py  test_validate.py
(+237 files in other folders)
